Store dara in Parse

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
   </head>
   <body ng-app="todoApp">
     <!--[if lte IE 8]>
